# autoLPR

./: .gitmodules  CMakeLists.txt  main.cpp
data/: yolov7-tiny.cfg
detector/: cpu_yolo_detector.cpp  cpu_yolo_detector.h  detector.cpp  detector.h  detector_base.h  detector_status.h  morphology_detector.cpp  morphology_detector.h  prediction_status.h
detector/yolo/: cpu_yolo_detector.cpp  cpu_yolo_detector.h  gpu_yolo_detector.cpp  gpu_yolo_detector.h  yolo_detector.cpp  yolo_detector.h
filtering/: kalman_filter.h
filtering/kalman/: kalman_filter.cpp  kalman_filter.h  kalman_rect_tracker.cpp  kalman_rect_tracker.h
grabber/: video_grabber.cpp  video_grabber.h
handlers/: handler.cpp  handler.h
recognizer/: recognizer.cpp  recognizer.h
tracker/: multi_tracker.cpp  multi_tracker.h  single_tracker.cpp  single_tracker.h  tracker.cpp  tracker.h  tracker_state.h
tracker/deepsort/: deepsort.cpp  deepsort.h  extractor.h  feature_bundle.h  feature_metric.h  hungarian.h  net.cpp  net.h  nn_matching.h  sort.cpp  sort.h  tracker_kalman.cpp  tracker_kalman.h  tracker_manager.cpp  tracker_manager.h
utils/: img_processing.h  ring_queue.h  size.h  timer.h
